fea-rs/test-data/parse-tests/bad/GPOS_5_non_null_no_mark.fea
feature test {
    position ligature f_i
    <anchor 100 200>
    ligComponent
    <anchor 100 500> mark @TOP_MARKS;
} test;
